[metadata]
name = lapu
version = attr: lapu.__version__
description = LaTeX article preparation utilities.
url = https://github.com/rc/lapu
author = Robert Cimrman
author_email = cimrman3@ntc.zcu.cz
license = BSD
license_file = LICENSE.txt
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    soops

[options.entry_points]
console_scripts =
    lapu-make-dist = lapu.make_dist:main
    lapu-shift-text = lapu.shift_text:main
